--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.1.3",
     "sass": "^1.83.4"
   },
   "devDependencies": {
